--- a/theme.css
+++ b/theme.css
@@ -8,6 +8,7 @@
 :root{
   --font-arial:Arial,Helvetica,sans-serif;
   --rgb-255-255-255:rgb(255,255,255);
+  --rgb-155-155-155:rgb(155,155,155);
   --rgb-0-0-0:rgb(0,0,0);
   --rgb-185-65-65:rgb(185,65,65);
   --rgb-0-165-100:rgb(0,165,100);
