--- a/theme.css
+++ b/theme.css
@@ -28,6 +28,7 @@ body{
 body{
   font-family:var(--font-arial);
   font-size:16px;
+  color:rgb(255,255,255);
   background-color:var(--rgb-0-0-0);}
 
 #app{
@@ -40,6 +41,9 @@ body{
   width:400px;
   max-width:100%;
   margin:auto;}
+
+.helper{
+  padding-top:20px;}
 
 ::-webkit-scrollbar-thumb,
 ::-webkit-scrollbar-track{
