--- a/theme.css
+++ b/theme.css
@@ -2,8 +2,8 @@
 :root{
   --font-arial:Arial,Helvetica,sans-serif;
   --rgb-255-255-255:rgb(255,255,255);
-  --rgb-155-155-155:rgb(155,155,155);
   --rgb-0-0-0:rgb(0,0,0);
+  --rgb-155-155-155:rgb(155,155,155);
   --rgb-185-65-65:rgb(185,65,65);
   --rgb-0-165-100:rgb(0,165,100);
   --rgb-25-125-230:rgb(25,125,230);}
@@ -28,7 +28,7 @@ body{
 body{
   font-family:var(--font-arial);
   font-size:16px;
-  color:rgb(255,255,255);
+  color:var(--rgb-255-255-255);
   background-color:var(--rgb-0-0-0);}
 
 #app{
