--- a/theme.css
+++ b/theme.css
@@ -1,19 +1,17 @@
 /* root */
 :root{
-  --line-height:160%;
+  --font-family:Arial,Helvetica,sans-serif;
+  --font-size:16px;
+  --line-height:150%;
   --border-radius:6px;
-  --font-family-default:Arial,Helvetica,sans-serif;
-  --font-size-default:16px;
-
   --rgb-255-255-255:rgb(255,255,255);
   --rgb-0-0-0:rgb(0,0,0);
-
   --rgb-155-155-155:rgb(155,155,155);
   --rgb-185-65-65:rgb(185,65,65);
   --rgb-0-165-100:rgb(0,165,100);
   --rgb-25-125-230:rgb(25,125,230);}
 
-*,*:after,*:before{
+*,*::after,*::before{
   -webkit-tap-highlight-color:rgba(0,0,0,0)!important;
   -webkit-tap-highlight-color:transparent!important;
   box-sizing:border-box!important;
@@ -24,6 +22,8 @@ a{
   color:var(--rgb-255-255-255);}
 
 iframe{border:none;}
+code{display:block;}
+pre{margin:0;}
 
 h1,h2,h3,h4,h5,h6{
   margin:0;}
@@ -37,11 +37,11 @@ body{
   height:100%;}
 
 body{
-  font-family:var(--font-family-default);
-  font-size:var(--font-size-default);
+  line-height:var(--line-height);
+  font-family:var(--font-family);
+  font-size:var(--font-size);
   color:var(--rgb-255-255-255);
-  background-color:var(--rgb-0-0-0);
-  line-height:var(--line-height);}
+  background-color:var(--rgb-0-0-0);}
 
 #app{
   position:relative;
@@ -85,9 +85,7 @@ body{
 
 .section{
   position:relative;
-  display:flex;
-  flex-direction:column;
-  gap:10px;
+  display:block;
   border-radius:var(--border-radius);
   background-color:rgb(10,10,10);
   padding:20px 20px;}
