--- a/theme.css
+++ b/theme.css
@@ -135,3 +135,17 @@ input- input{
   background-color:transparent!important;
   width:100%;
   height:inherit;}
+
+
+
+input-text{
+      position:relative;
+      display:inline-flex;
+      border:none;
+      border-radius:var(--border-radius);
+      width:100%;
+      min-width:100%;
+      max-width:100%;
+      height:40px;
+      background-color:rgb(30,30,30);
+      color:rgb(175,175,175);}
