--- a/theme.css
+++ b/theme.css
@@ -113,3 +113,54 @@ input-text{
   height:40px;
   background-color:rgb(30,30,30);
   color:rgb(175,175,175);}
+
+/*
+input{
+  display:block;
+  height:40px;
+  color:var(--rgb-255-255-255);
+  background-color:transparent;
+  line-height:30px;
+  overflow:hidden;
+  border:1px solid #ff0000;
+  outline:none;}
+*/
+
+input-block{
+  position:relative;
+  display:inline-flex;
+  max-width:100%;
+  height:40px;
+  align-items:center;
+  vertical-align:middle;
+  border:none;
+  border-radius:var(--border-radius);
+  background-color:rgb(30,30,30);
+  color:rgb(175,175,175);
+  overflow:hidden;
+  transition:color 0.2s;}
+
+input-block > icon-block{
+  color:rgb(175,175,175);
+  justify-content:center;
+  width:40px;}
+
+input-block > input{
+  display:block;
+  height:inherit;
+  flex-grow:1;
+  padding:0 12px;
+  border:none;
+  color:rgb(255,255,255);
+  background-color:rgb(40,40,40);
+  transition:background-color 0.2s,color 0.2s;}
+
+@media (hover:hover){
+  input-block > icon-block:hover{
+    color:rgb(255,255,255);}
+
+  input-block > input:hover,
+  input-block > input:focus{
+    color:rgb(255,255,255);
+    background-color:rgb(50,50,50);}
+}
