--- a/theme.css
+++ b/theme.css
@@ -141,7 +141,7 @@ article .icons > :nth-child(n){
   row-gap:10px;}
 
 .example code{
-  margin:10px 0 20px;
+  margin:20px 0;
   padding:10px;
   border-radius:var(--border-radius);
   background-color:rgb(15,15,15);}
