--- a/theme.css
+++ b/theme.css
@@ -2,9 +2,12 @@
 :root{
   --line-height:1.5;
   --font-family:Arial,Helvetica,sans-serif;
-  --font-size-small:12px;
-  --font-size-medium:14px;
-  --font-size-large:16px;
+
+  --font-size-x-small:12px;
+  --font-size-small:14px;
+  --font-size-medium:16px;
+  --font-size-large:18px;
+  --font-size-x-large:20px;
 
   --border-radius:6px;
 
@@ -29,6 +32,12 @@
   --rgb-185-65-65:rgb(185,65,65);
   --rgb-0-165-100:rgb(0,165,100);
   --rgb-25-125-230:rgb(25,125,230);}
+
+.font-size-x-small{font-size:var(--font-size-x-small);}
+.font-size-small{font-size:var(--font-size-small);}
+.font-size-medium{font-size:var(--font-size-medium);}
+.font-size-large{font-size:var(--font-size-large);}
+.font-size-x-large{font-size:var(--font-size-x-large);}
 
 *,*::after,*::before{
   -webkit-tap-highlight-color:rgba(0,0,0,0)!important;
@@ -58,7 +67,7 @@ body{
 body{
   line-height:var(--line-height);
   font-family:var(--font-family);
-  font-size:var(--font-size-large);
+  font-size:var(--font-size-medium);
   color:var(--rgb-255-255-255);
   background-color:var(--rgb-0-0-0);}
 
@@ -150,23 +159,29 @@ article .example{
   position:relative;
   display:flex;
   flex-direction:column;
-  padding:20px;
-  border-radius:var(--border-radius);
-  background-color:var(--rgb-10-10-10);}
+  border-radius:var(--border-radius);}
 
 article .info{
-  row-gap:10px;}
+  padding:20px;
+  row-gap:10px;
+  background-color:var(--rgb-10-10-10);}
 
 article .example{
-  row-gap:20px;}
+  border:1px solid var(--rgb-25-25-25);}
 
 article .example:not(:last-child){
   margin-bottom:40px;}
 
-.example code{
-  padding:10px;
-  border-radius:var(--border-radius);
-  background-color:var(--rgb-0-0-0);}
+article .example .preview,
+article .example code{
+  width:100%;
+  padding:15px;}
+
+article .example .preview{
+  background-color:var(--rgb-10-10-10);}
+
+article .example code{
+  border-top:1px solid var(--rgb-25-25-25);}
 
 code span{
   letter-spacing:1px;
