--- a/theme.css
+++ b/theme.css
@@ -2,6 +2,7 @@
 :root{
   --line-height:1.5;
   --font-family:Arial,Helvetica,sans-serif;
+  --font-family-ui-monospace:ui-monospace,SFMono-Regular,SF Mono,Menlo,Consolas,Liberation Mono,monospace;
 
   --font-size-x-small:12px;
   --font-size-small:14px;
@@ -25,6 +26,7 @@
   --rgb-100-100-100:rgb(100,100,100);
   --rgb-75-75-75:rgb(75,75,75);
   --rgb-50-50-50:rgb(50,50,50);
+  --rgb-45-45-45:rgb(40,40,40);
   --rgb-40-40-40:rgb(40,40,40);
   --rgb-35-35-35:rgb(35,35,35);
   --rgb-30-30-30:rgb(30,30,30);
@@ -36,8 +38,16 @@
   --rgb-0-0-0:rgb(0,0,0);
 
   --rgb-185-65-65:rgb(185,65,65);
+  --rgb-230-75-60:rgb(230,75,60);
+  --rgb-255-0-0:rgb(255,0,0);
+
   --rgb-0-165-100:rgb(0,165,100);
-  --rgb-25-125-230:rgb(25,125,230);}
+  --rgb-0-255-0:rgb(0,255,0);
+  --rgb-76-175-80:rgb(76,175,80);
+
+  --rgb-25-125-230:rgb(25,125,230);
+  --rgb-0-125-255:rgb(0,125,255);
+  --rgb-0-0-255:rgb(0,0,255);}
 
 .font-size-x-small{font-size:var(--font-size-x-small);}
 .font-size-small{font-size:var(--font-size-small);}
@@ -54,8 +64,7 @@
 *,*::after,*::before{
   -webkit-tap-highlight-color:rgba(0,0,0,0)!important;
   -webkit-tap-highlight-color:transparent!important;
-  box-sizing:border-box!important;
-  outline:none!important;}
+  box-sizing:border-box!important;}
 
 a{
   text-decoration:none;
@@ -203,6 +212,7 @@ article .example .preview{
   background-color:var(--rgb-10-10-10);}
 
 article .example code{
+  font-family:var(--font-family-ui-monospace);
   border-top:1px solid var(--rgb-25-25-25);}
 
 article .example code span{
