--- a/ui/ui-input/ui-input.css
+++ b/ui/ui-input/ui-input.css
@@ -2,17 +2,13 @@ ui-input{
   display:inline-flex;
   align-items:center;
   vertical-align:middle;
+  height:var(--ui-object-height);
+  padding-inline:calc(var(--ui-object-height) / 4);
+  border:none;
   border-radius:var(--ui-border-radius);
   color:var(--rgb-175-175-175);
   background-color:var(--rgb-25-25-25);
   overflow:hidden;}
-
-ui-input[disabled]{
-  cursor:not-allowed;
-  opacity:0.5;}
-
-ui-input[disabled] *{
-  pointer-events:none;}
 
 ui-input[animated]{
   transition-duration:var(--ui-transition-duration);
@@ -39,18 +35,22 @@ ui-input > input{
   flex-grow:1;
   width:fit-content;
   border:none;
+  outline:none;
   color:var(--rgb-255-255-255);
   background-color:transparent;
-  direction:inherit;}
+  direction:inherit;
+  font-size:clamp(
+    var(--ui-font-size-x-small),
+    calc(var(--ui-object-height) / 2),
+    var(--ui-font-size-large)
+  );}
 
 ui-input > input::-ms-reveal{
   display:none;}
 
 ui-input > ui-icon{
-  color:var(--rgb-100-100-100);
-  height:100%;
-  width:var(--height);
-  padding-block:calc(var(--height) / 4);}
+  width:fit-content;
+  height:clamp(12px,calc(var(--ui-object-height) / 2),20px);}
 
 ui-input > ui-icon[icon="cancel"]{
   cursor:pointer;}
@@ -70,22 +70,3 @@ ui-input > ui-icon[icon="cancel"]{
 ui-input[focused]:not([disabled]){
   outline-color:var(--rgb-75-75-75);
 }
-
-ui-input > input{
-  font-size:clamp(
-    var(--font-size-x-small),
-    calc(var(--height) / 2 - 2px),
-    var(--font-size-medium)
-  );}
-
-ui-input:not([icon-start]) input{
-  padding-inline-start:calc(var(--height) / 3);}
-
-/*
-:host{
-  outline-style:solid;
-  outline-width:1px;
-  outline-offset:0;
-  outline-color:var(--rgb-35-35-35);
-}
-*/
