--- a/ui/ui-input/ui-input.css
+++ b/ui/ui-input/ui-input.css
@@ -3,7 +3,6 @@ ui-input{
   align-items:center;
   vertical-align:middle;
   height:var(--ui-object-height);
-  column-gap:calc(var(--ui-object-height) / 4 - 2px);
   border:none;
   border-radius:var(--ui-border-radius);
   color:var(--rgb-175-175-175);
@@ -11,24 +10,7 @@ ui-input{
   overflow:hidden;}
 
 ui-input[animated]{
-  transition-duration:var(--ui-transition-duration);
-  transition-property:background-color,color,outline-color,border-color;}
-
-ui-input[error],
-ui-input[valid],
-ui-input[warning]{
-  outline-style:solid;
-  outline-width:1px;
-  outline-offset:0;}
-
-ui-input[error]{
-  outline-color:var(--rgb-210-55-55);}
-
-ui-input[valid]{
-  outline-color:var(--rgb-85-175-85);}
-
-ui-input[warning]{
-  outline-color:var(--rgb-210-175-20);}
+  transition-property:background-color,color,outline-color;}
 
 ui-input input{
   height:100%;
@@ -53,13 +35,15 @@ ui-input ui-icon{
   width:fit-content;
   height:clamp(12px,calc(var(--ui-object-height) / 2),20px);}
 
-@media (hover:hover){
+ui-input > ui-icon[icon="cancel"]{
+  cursor:pointer;}
 
+@media (hover:hover){
   ui-input[animated]:hover:not([disabled]),
   ui-input[focused]{
     background-color:var(--rgb-35-35-35);}
 
-  ui-input ui-icon:hover{
+  ui-input > ui-icon:hover{
     color:var(--rgb-225-225-225);}
 
   ui-input[animated]:hover:not([disabled]){
@@ -69,3 +53,19 @@ ui-input ui-icon{
 ui-input[focused]:not([disabled]){
   outline-color:var(--rgb-75-75-75);
 }
+
+ui-input[error],
+ui-input[valid],
+ui-input[warning]{
+  outline-style:solid;
+  outline-width:1px;
+  outline-offset:0;}
+
+ui-input[error]{
+  outline-color:var(--rgb-210-55-55);}
+
+ui-input[valid]{
+  outline-color:var(--rgb-85-175-85);}
+
+ui-input[warning]{
+  outline-color:var(--rgb-210-175-20);}
