--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -28,6 +28,9 @@
 [ui][animated]{
   transition-duration:var(--ui-transition-duration);}
 
+[ui] input::-ms-reveal{
+  display:none;}
+
 ui-icon,
 ui-divider,
 ui-button,
