--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -2,6 +2,7 @@
 @import './ui-divider/ui-divider.css';
 @import './ui-icon/ui-icon.css';
 @import './ui-input/ui-input.css';
+@import './ui-switch/ui-switch.css';
 @import './ui-text/ui-text.css';
 
 :root{
