--- a/theme/theme.css
+++ b/theme/theme.css
@@ -4,19 +4,14 @@
   --font-family:Arial,Helvetica,sans-serif;
   --font-family-ui-monospace:ui-monospace,SFMono-Regular,SF Mono,Menlo,Consolas,Liberation Mono,monospace;
 
-  --font-size-x-small:12px;
-  --font-size-small:14px;
-  --font-size-medium:16px; /* base */
-  --font-size-large:18px;
-  --font-size-x-large:20px;
-
-  --border-radius:6px;
-
   --text-align-left:left;
   --text-align-right:right;
   --text-align-center:center;
   --text-align-start:start;
   --text-align-end:end;
+
+  --color-black:rgb(0,0,0);
+  --color-white:rgb(255,255,255);
 
   --rgb-255-255-255:rgb(255,255,255);
   --rgb-225-225-225:rgb(225,225,225);
@@ -35,7 +30,6 @@
   --rgb-15-15-15:rgb(15,15,15);
   --rgb-10-10-10:rgb(10,10,10);
   --rgb-5-5-5:rgb(5,5,5);
-  --rgb-0-0-0:rgb(0,0,0);
 
   --rgb-210-55-55:rgb(210,55,55);
   --rgb-85-175-85:rgb(85,175,85);
@@ -46,11 +40,9 @@
   --rgb-0-125-255:rgb(0,125,255);
   --rgb-0-0-255:rgb(0,0,255);}
 
-.font-size-x-small{font-size:var(--font-size-x-small);}
-.font-size-small{font-size:var(--font-size-small);}
-.font-size-medium{font-size:var(--font-size-medium);}
-.font-size-large{font-size:var(--font-size-large);}
-.font-size-x-large{font-size:var(--font-size-x-large);}
+@media (prefers-color-scheme:dark){
+
+}
 
 .text-align-left{text-align:var(--text-align-left);}
 .text-align-right{text-align:var(--text-align-right);}
@@ -85,9 +77,9 @@ body{
 body{
   line-height:var(--line-height);
   font-family:var(--font-family);
-  font-size:var(--font-size-medium);
+  font-size:var(--ui-font-size-medium);
   color:var(--rgb-255-255-255);
-  background-color:var(--rgb-0-0-0);}
+  background-color:rgb(0,0,0);}
 
 ::-webkit-scrollbar-thumb,
 ::-webkit-scrollbar-track{
@@ -121,7 +113,7 @@ nav .menuItem{
   display:block;
   cursor:pointer;
   font-size:var(--font-size-small);
-  color:var(--rgb-175-175-175);}
+  color:rgb(175,175,175);}
 
 nav span{
   display:flex;
@@ -129,16 +121,17 @@ nav span{
   column-gap:10px;
   padding:5px 10px;
   font-size:100%;
-  border-radius:var(--border-radius);
-  transition:background-color 0.2s,color 0.2s;}
+  border-radius:var(--ui-border-radius);
+  transition-duration:0.2s;
+  transition-property:background-color,color;}
 
 @media (hover:hover){
 nav span:hover{
-  background-color:var(--rgb-10-10-10);}
+  background-color:rgb(10,10,10);}
 }
 
 nav span.active{
-  background-color:var(--rgb-25-25-25);}
+  background-color:rgb(25,25,25);}
 
 article{
   position:relative;
@@ -147,71 +140,105 @@ article{
   padding:60px 10px;
   flex-grow:1;}
 
-article .intro{
+
+
+/* intro */
+.intro{
   display:flex;
   flex-direction:column;
   row-gap:30px;}
 
-article .title{
+.intro > h1{
   line-height:1;
-  color:var(--rgb-255-255-255);
+  color:rgb(255,255,255);
   font-size:240%;}
 
-article .description{
-  color:var(--rgb-175-175-175);}
+.intro > .description{
+  color:rgb(175,175,175);}
 
-article .content{
-  position:relative;
+.intro > .info{
+  display:flex;
+  flex-direction:column;
+  row-gap:20px;}
+
+.intro > .info > h3{
+  font-size:120%;}
+
+.intro > .info > ul{
+  display:flex;
+  flex-direction:column;
+  row-gap:16px;
+  margin:0;}
+
+
+
+
+/* content */
+.content{
   display:flex;
   flex-direction:column;
   row-gap:10px;
   padding:50px 0;}
 
-article .icons{
-  display:flex;
-  gap:10px;
-  flex-wrap:wrap;}
-
-article .icons > :nth-child(n){
-  border-radius:var(--border-radius);
-  /*background-color:var(--rgb-25-25-25);*/
-  height:20px;
-  width:20px;}
-
-article .intro > ul{
+.content > .example{
   display:flex;
   flex-direction:column;
-  row-gap:15px;
-  margin:0;}
+  border-radius:var(--ui-border-radius);}
 
-article .example{
-  position:relative;
-  display:flex;
-  flex-direction:column;
-  border-radius:var(--border-radius);}
+.content > .example{
+  border:1px solid rgb(25,25,25);}
 
-article .example{
-  border:1px solid var(--rgb-25-25-25);}
-
-article .example:not(:last-child){
+.content > .example:not(:last-child){
   margin-bottom:40px;}
 
-article .example .preview,
-article .example code{
+.content > .example > .toolbar{
+  padding:10px;
+  border-bottom:1px solid rgb(25,25,25);}
+
+.content > .example > .preview,
+.content > .example > code{
   width:100%;
   padding:15px;}
 
-article .example .preview{
+.content > .example > .preview{
   display:flex;
   flex-wrap:wrap;
   justify-content:center;
   gap:10px;
-  background-color:var(--rgb-10-10-10);}
+  background-color:rgb(10,10,10);}
 
 article .example code{
   font-family:var(--font-family-ui-monospace);
-  border-top:1px solid var(--rgb-25-25-25);}
+  border-top:1px solid rgb(25,25,25);}
 
 article .example code span{
   letter-spacing:1px;
   display:block;}
+
+
+
+/* content icons-pack */
+.content.icons-pack > .example{
+  border:none;}
+
+.content.icons-pack > .example > .preview{
+  background:transparent;
+  justify-content:start;
+  padding:0;}
+
+.content.icons-pack > .example > .preview > .icon-card{
+  display:flex;
+  min-width:100px;
+  row-gap:14px;
+  flex-direction:column;
+  align-items:center;
+  padding:12px 10px 10px;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgb(50,50,50);
+  border-radius:var(--ui-border-radius);
+  line-height:1;}
+
+.content.icons-pack > .example > .preview > .icon-card > .icon-name{
+  color:rgb(175,175,175);
+  font-size:80%;}
